--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* ----- Reset and Common Styles ----- */
 *{
-  margin: 0:
+  margin: 0;
   padding: 0;
   outline: none;
   box-sizing: border-box;
@@ -20,10 +20,20 @@ html {
   align-items: center;
 }
 
+.section-heading {
+  font-size: 5rem;
+  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  margin-bottom: 10rem;
+  border-bottom: 0.3rem solid #333;
+  text-shadow: 0.2rem 0.2rem 0.5rem #555;
+}
+
 /* ----- End of Reset and Common Styles ----- */
 
-/* ----- Section 1 ----- */
-.section-1 {
+/* ----- Hero Section ----- */
+.hero-section {
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -34,7 +44,7 @@ html {
   flex-direction: column;
 }
 
-.section-1-heading {
+.hero-heading {
   font-size: 6rem;
   font-weight: 700;
   color: #fff;
@@ -69,7 +79,7 @@ html {
   transform: skew(-10deg);
 }
 
-.section-1-button {
+.hero-button {
   font-size: 1.7rem;
   font-weight: 700;
   color: #333;
@@ -79,7 +89,7 @@ html {
   text-transform: uppercase;
   letter-spacing: 0.3rem;
 }
-/* ----- End of Section 1 ----- */
+/* ----- End of Hero Section ----- */
 
 /* ----- Navbar ----- */
 .navbar {
@@ -87,6 +97,9 @@ width: 100%;
 height: 4rem;
 background-color: #e41c6f;
 box-shadow: 0.2rem 0.2rem 0.5rem #555;
+position: -webkit-sticky;
+position: sticky;
+top: 0;
 }
 
 .navbar-link {
@@ -104,7 +117,7 @@ box-shadow: 0.2rem 0.2rem 0.5rem #555;
   color: #fff;
 }
 
-.navbar-link::before { /* psuedo-element to add hover effects */
+.navbar-link::before {
   content: "";
   width: 0;
   height: 0.2rem;
@@ -117,51 +130,39 @@ box-shadow: 0.2rem 0.2rem 0.5rem #555;
 
 .navbar-link:hover::before { 
   width: 130%;
-
 }
 /* ----- End of Navbar ----- */
 
-/* ----- Section 2 ----- */
-.section-2 {
+/* ----- About Section ----- */
+.about-section {
   width: 100%;
   height: 100%;
   padding: 15rem 0 10rem 0;
   background-color: #fff;
-  display: flex;
-  align-items: center;
   flex-direction: column;
 }
 
-.section-2-heading {
-  font-size: 5rem;
-  color: #333;
-  text-transform: uppercase;
-  letter-spacing: 0.5rem;
-  margin: 0 0 10rem 0;
-  border-bottom: 0.3rem solid #333;
-  text-shadow: 0.2rem 0.2rem 0.5rem #555;
-}
-
-.about-me-wrapper {
-  /* width: 60rem; /* TODO -- change to % for responsive?*/  */
+.about-wrapper {
   width: 90%;
   display: flex;
   justify-content: space-around;
   flex-flow: row wrap;
-
 }
 
 .about-description {
   width: 42%;
   font-size: 2rem;
   color: #333;
-  margin-bottom: 5rem;
   display: flex;
   flex-direction: column;  
 }
 
+.about-description p {
+  margin-bottom: 2rem;
+}
+
 .dev-icons-wrapper {
-  width: 50%; /* TODO -- change to % for responsive?*/ 
+  width: 50%;
   height: 30vh;
   display: flex;
   justify-content: center;
@@ -169,7 +170,6 @@ box-shadow: 0.2rem 0.2rem 0.5rem #555;
 }
 
 .icon-list {
-  margin: 0;
   display: flex;
   justify-content: center;
 }
@@ -180,4 +180,108 @@ box-shadow: 0.2rem 0.2rem 0.5rem #555;
   text-shadow: 0.2rem 0.2rem 0.3rem #555;
   padding: 0 15%;
 }
-/* ----- End of SEction 2 ----- */
+/* ----- End of About Section ----- */
+
+/* ----- Projects Section ----- */
+.projects-section {
+  width: 100%;
+  height: 100%;
+  padding: 10rem 0;
+  background-color: #eef;
+  flex-direction: column;
+}
+
+.projects-wrapper {
+  width: 90%;
+  flex-wrap: wrap;
+}
+
+.project {
+margin: 1rem;
+background-color: #fff;
+box-shadow: 0.3rem 0.3rem 0.5rem #777;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+position: relative;
+overflow: hidden;
+transition: box-shadow 0.5s;
+}
+
+.project:hover {
+  box-shadow: 1rem 1rem 1rem #777;
+}
+
+.project-text {
+  text-align: center;
+  letter-spacing: 0.1rem;
+  position: absolute;
+  top: -10rem;
+  z-index: 10;
+}
+
+.project:hover .project-text {
+  top: 5rem;
+  transition: top 0.3s 0.3s;
+}
+
+.project-name {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #333;
+  text-transform: capitalize;
+}
+
+.project-tech {
+  font-size: 1.8rem;
+  color: #e41c6f;
+}
+
+.project-img {
+  width: 40rem;
+  height: 25rem;
+  object-fit: cover;
+  transition: opacity 0.3s;
+}
+
+.project:hover .project-img {
+  opacity: 0.2;
+}
+
+.project-button {
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #333;
+  text-align: center;
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+  padding: 0 1rem;
+  background-color: #fff;
+  border: .3rem solid #e41c6f;
+  position: absolute;
+  bottom: -5rem;
+}
+
+.project:hover .project-button {
+  bottom: 5rem;
+  transition: bottom 0.3s 0.3s;
+}
+/* ----- End of Projects Section ----- */
+.contact-section {
+  width: 100%;
+  height: 200vh;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* ----- Contact Section ----- */
+
+/* ----- End of Contact Section ----- */
+
+/* ----- Footer Section ----- */
+
+/* ----- End of Footer Section ----- */
