--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* TODO --- THINGS TO UPDATE
-- make hero heading two lines, larger font 
+-- fix responsive on scaling (small mobile)
+- make submit form work
 */
 
 /* ----- Reset and Common Styles ----- */
@@ -17,6 +18,10 @@
 html {
   font-size: 50%; /* setting default font size to 8px */
   scroll-behavior: smooth;
+}
+
+.hide {
+  display: none;
 }
 
 .center {
@@ -51,7 +56,7 @@ section {
 
 /* ----- Hero Section ----- */
 .hero-section {
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(
     rgba(255,255,255, .2),
     rgba(255,255,255, .3)), 
@@ -60,7 +65,7 @@ section {
 }
 
 .hero-heading {
-  font-size: 2.5rem;
+  font-size: 4rem;
   font-weight: 700;
   color: #fff;
   background-color: #e41c6f;
@@ -71,6 +76,14 @@ section {
   border-bottom: 0.3rem solid #fff;
   text-shadow: 0.2rem 0.2rem 1rem #555;
   transform: skew(-10deg);
+}
+
+#not-mobile {
+  display: none;
+}
+
+#mobile-top {
+  margin-bottom: 2rem;
 }
 
 .person-img {
@@ -287,7 +300,6 @@ transition: box-shadow 0.5s;
 
 /* ----- Contact Section ----- */
 .contact-section {
-  height: 90vh;
   background-color: #333;
   justify-content: space-evenly;
 }
@@ -334,7 +346,7 @@ min-width: 100%;
 /* ----- Footer Section ----- */
 .footer-wrapper {
   width: 100%;
-  height: 30vh;
+  padding: 5rem 0;
   background: #222;
   flex-direction: column;
 }
@@ -382,8 +394,17 @@ color: #fff;
     font-size: 5rem;
   }
 
+  #not-mobile {
+    display: initial;
+  }
+  
+  #mobile-top,
+  #mobile-bottom {
+    display: none;
+  }
+
   .person-name {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   .navbar-link {
@@ -411,14 +432,14 @@ color: #fff;
 @media screen and (min-width: 1200px) {
   /**** DESKTOP STYLES - Homepage ****/
 
+.hero-section {
+  height: 100vh;
+}
+
   .hero-heading {
     font-size: 6rem;
   }
   
-  .person-name {
-    font-size: 2rem;
-  }
-
   .hero-button {
     font-size: 1.7rem;
     border: 0.3rem solid #333;
@@ -444,7 +465,7 @@ color: #fff;
   }
   
   .dev-icons-wrapper {
-    height: 30vh;
+    /* height: 20vh; */
   }
   
   .icon-list-item {
