--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ section {
   background-size: cover;
 }
 
-.hero-heading {
+.hero-heading,
+.thanks-heading {
   font-size: 3rem;
   font-weight: 700;
   color: #fff;
@@ -69,6 +70,11 @@ section {
   border-bottom: 0.3rem solid #fff;
   text-shadow: 0.2rem 0.2rem 1rem #555;
   transform: skew(-10deg);
+}
+
+.thanks-heading {
+  font-size: 3.5rem;
+  border-bottom: none;
 }
 
 #not-mobile {
@@ -100,7 +106,8 @@ section {
   transform: skew(-10deg);
 }
 
-.hero-button {
+.hero-button,
+.thanks-button {
   font-size: 2.2rem;
   font-weight: 700;
   color: #333;
@@ -110,6 +117,7 @@ section {
   text-transform: uppercase;
   letter-spacing: 0.3rem;
 }
+
 /* ----- End of Hero Section ----- */
 
 /* ----- Navbar ----- */
@@ -327,7 +335,8 @@ max-width: 100%;
 min-width: 100%;
 }
 
-.contact-form .contact-button {
+.contact-form .contact-button,
+.thank-you-button {
   font-size: 1.5rem;
   color: #fff;
   background-color: #e41c6f;
@@ -372,6 +381,25 @@ color: #fff;
 }
 /* ----- End of Footer Section ----- */
 
+/* ----- Thank You Page ----- */
+
+.thanks-wrapper {
+  width: 80%;
+  flex-direction: column;
+  margin-bottom: 5rem;
+}
+
+.thanks-text {
+  font-size: 2.3rem;
+  color: #333;
+  text-align: justify;
+  margin-bottom: 5rem;
+}
+
+.dance-gif {
+  width: 80%;
+}
+/* ----- End of Thank You Page ----- */
 
 /* ==========================================================================
   Media Queries for Responsive Design
@@ -412,7 +440,8 @@ color: #fff;
     height: initial;
   }  
 
-  .hero-heading {
+  .hero-heading,
+  .thanks-heading {
     font-size: 5rem;
   }
 
@@ -466,6 +495,10 @@ color: #fff;
   .footer-wrapper {
     padding: 5rem 0;
   }
+
+  .dance-gif {
+    width: 50%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -475,7 +508,8 @@ color: #fff;
   height: 100vh;
   }
 
-  .hero-heading {
+  .hero-heading,
+  .thanks-heading {
     font-size: 6rem;
   }
   
@@ -514,4 +548,23 @@ color: #fff;
   .project {
     width: auto;
   }
+
+  .thanks-section {
+    padding-top: 5rem;
+  }
+
+
+  .thanks-wrapper {
+  justify-content: space-around;
+  flex-flow: row wrap;
+  }
+
+  .thanks-text,
+  .gif-wrapper {
+    width: 45%;
+  }
+
+  .dance-gif {
+    width: 60%;
+  }  
 }
